# Yadro_tape_task

./: .gitignore  CMakeLists.txt  README.md  config.txt  main.cpp
include/: config.hpp  exceptions.hpp  sorter.hpp  tape.hpp
source/: config.cpp
tests/: test.cpp  test.sh  test1.in  test3.in  test4.in  test4.out  test5.in  test5.out  test_08.out  test_gener.py
tests/sort_test/0/: config_0.txt
tests/sort_test/1/: config_1.txt
tests/sort_test/10/: 10.ans  config_10.txt
tests/sort_test/11/: 11.ans  config_11.txt
tests/sort_test/3/: 3.in  config_3.txt
tests/sort_test/4/: 4.ans
tests/sort_test/5/: 5.ans  5.in  config_5.txt
tests/sort_test/7/: 7.in
tests/sort_test/9/: 9.ans
tests/unit/: bad_config_1.txt  good_config_1.txt  good_config_2.txt
tests/unit/1/: 1.in  1.out
tests/unit/10/: 10.in
tests/unit/11/: 11.in
tests/unit/2/: 2.in  2.out  config_2.txt
tests/unit/3/: 3.ans  3.in
tests/unit/4/: 4.in  config_4.txt
tests/unit/6/: 6.ans  6.in
tests/unit/7/: 7.out  config_7.txt
tests/unit/9/: config_9.txt
